Improve readability and fix frontend bugs

--- a/src/view/static/css/main.css
+++ b/src/view/static/css/main.css
@@ -6,6 +6,7 @@
   font-family: system-ui, "Segoe UI", "Helvetica Neue";
 
   user-select: none;
+
   -webkit-user-drag: none;
 }
 
@@ -15,25 +16,26 @@ html {
 
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #c0c0c0;
   border-radius: 4px;
+
+  background-color: #c0c0c0;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #b0b0b0;
+  background-color: #b0b0b0;
 }
 
 ::-webkit-scrollbar-track {
-  background: #d9d9d9;
+  background-color: #d9d9d9;
 }
 
 body {
   width: 100%;
   height: 100%;
-
   margin: 0;
   padding: 0;
 
